# deb-greatspn

./: .travis.yml
greatspn/: .cproject
greatspn/SOURCES/: .Makefile.Linux-OpenMotif.swp  HELL_DIR  Makefile  Makefile.Linux  Makefile.Linux-OpenMotif
greatspn/SOURCES/UIL/: .printdialog.uil.swp  .simdialog.uil.swp
greatspn/SOURCES/WN/: Makefile.all  y.output  y.tab.h
greatspn/SOURCES/WN/SOURCE/UNFOLDING/: Makefile  Makefile.in  SWN2GSPN.kdevelop  SWN2GSPN.kdevelop.pcs  SWN2GSPN.kdevses  chain  config.status  configure  configure.ac  configure.lineno  unfolding.sh
greatspn/SOURCES/WN/SOURCE/UNFOLDING/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
greatspn/SOURCES/WN/SOURCE/UNFOLDING/src/: Makefile  Makefile.in  README  SWN-types.c  SWN-types.h  assignment.c  assignment.h  attrib-yacc.c  attrib-yacc.h  chain  configure.scan  evaluate.c  evaluate.h  generic-def.h  global.h  layer.c  lisp-obj_lex.c  lisp-obj_lex.l  lisp-obj_yacc.c  lisp-obj_yacc.h  lisp-obj_yacc.y  lista-adt.c  lista-adt.h  load.c  log  mainTransl.c  multiset-adt.c  multiset-adt.h  object.c  object.h  option.h  save.c  set-adt.c  set-adt.h  translate.c  unfold.c  unfolding-obj.c  util-transl.c  util-transl.h  var-lex.h  (+1 more)
greatspn/SOURCES/WN/SOURCE/UNFOLDING/src/.deps/: SWN-types.Po  alloc.Po  assignment.Po  attrib-yacc.Po  evaluate.Po  global.Po  layer.Po  lisp-obj_lex.Po  lisp-obj_yacc.Po  lista-adt.Po  load.Po  mainTransl.Po  multiset-adt.Po  save.Po  set-adt.Po  unfold.Po  unfolding-obj.Po  util-transl.Po
greatspn/SOURCES/contrib/: Makefile.Linux  first.c
(+728 files in other folders)
